# tree-sitter-eiffel

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  regenerate.yml  test.yml
bindings/c/: tree-sitter-eiffel.pc.in
bindings/c/tree_sitter/: tree-sitter-eiffel.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js  parsing_test.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_eiffel/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterEiffelTests/: TreeSitterEiffelTests.swift
queries/: highlights.scm  indents.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c
test/: parsing_test.js
test/corpus/: body.txt  class.txt  comment.txt  comment_spaces.txt  errors.txt  expression.txt  feature.txt  instruction.txt  number.txt  string.txt  types.txt
test/highlight/: comments.e  keywords.e
test/parsing/: creation_clause_identifier.e  creation_clause_identifier.out  feature_do.e  feature_do.out  unfinished_comment.e  unfinished_comment.out
