[package]
name = "tree-sitter-eiffel"
description = "Eiffel grammar for the tree-sitter parsing library"
version = "1.0.0"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "eiffel"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-eiffel"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.2"
